add parameters to findAll() to sort all the products